--- a/oktogit.Tests/oktogit.Tests.csproj
+++ b/oktogit.Tests/oktogit.Tests.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TestData\TestClass.cs" />
+    <Compile Include="TestData\TODO.cs" />
     <Compile Include="UnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
